--- a/index.html
+++ b/index.html
@@ -345,7 +345,8 @@
 
     <div class="content has-text-justified">
       <p>
-        In a massively parallelized simulation, our robot learns through trial-and-error how to track UMI gripper.
+        In a massively parallelized simulation, our robot learns through trial-and-error how to track UMI gripper
+        movements with stability and precision.
       </p>
     </div>
   </div>
@@ -597,7 +598,7 @@
     </div>
     <br>
     <pre class="is-hidden-mobile"><code>@inproceedings{ha2024umilegs,
-  title={{UMI} on Legs: Making Manipulation Policies Mobile with Manipulation-Centric Whole-body Controllers}, 
+  title={{UMI} on Legs: Making Manipulation Policies Mobile with Manipulation-Centric Whole-body Controllers},
   author={Huy Ha and Yihuai Gao and Zipeng Fu and Jie Tan and Shuran Song},
   year={2024},
   booktitle={Proceedings of the 2024 Conference on Robot Learning},
