added workshop acceptance

--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
       <h1 class="is-2 is-italic is-size-4-mobile" style="font-size: 2rem; opacity: 80%;">
         Conference on Robot Learning 2024
       </h1>
+      <h1 class="is-2 is-italic is-size-4-mobile" style="font-size: 2rem; opacity: 80%;">
+        X-Embodiment Workshop CoRL 2024
+      </h1>
       <div class="column has-text-centered is-hidden-tablet">
         <div class="publication-links">
           <!-- PDF Link. -->
