--- a/index.html
+++ b/index.html
@@ -498,12 +498,12 @@
       <div class="publication-authors is-flex justify-content is-justify-content-space-around is-hidden-mobile">
         <div class="author-block has-text-centered has-addons-centered">
           <figure class="image is-128x128">
-            <a href="https://www.cs.columbia.edu/~huy/">
+            <a href="https://huy-ha.github.io/">
               <img class="is-rounded
                       " src="./static/images/huy.jpg" alt="Huy Ha">
             </a>
           </figure>
-          <a href="https://www.cs.columbia.edu/~huy/">Huy Ha</a><sup>*,1,2</sup>
+          <a href="https://huy-ha.github.io/">Huy Ha</a><sup>*,1,2</sup>
         </div>
         <div class="author-block has-text-centered has-addons-centered">
           <figure class="image is-128x128">
@@ -546,12 +546,12 @@
       <div class="is-flex is-flex-direction-row is-flex-wrap-wrap is-justify-content-space-evenly is-hidden-tablet">
         <div class="author-block has-text-centered has-addons-centered">
           <figure class="image  is-96x96">
-            <a href="https://www.cs.columbia.edu/~huy/">
+            <a href="https://huy-ha.github.io/">
               <img class="is-rounded
                       " src="./static/images/huy.jpg" alt="Huy Ha">
             </a>
           </figure>
-          <a href="https://www.cs.columbia.edu/~huy/">Huy Ha</a><sup>*,1,2</sup>
+          <a href="https://huy-ha.github.io/">Huy Ha</a><sup>*,1,2</sup>
         </div>
         <div class="author-block has-text-centered has-addons-centered">
           <figure class="image  is-96x96">
@@ -610,7 +610,7 @@
   booktitle={Proceedings of the 2024 Conference on Robot Learning},
 }</code></pre>
     <p>
-      If you have any questions, please contact <a href="https://www.cs.columbia.edu/~huy/">Huy Ha</a> and <a
+      If you have any questions, please contact <a href="https://huy-ha.github.io/">Huy Ha</a> and <a
         href="https://yihuai-gao.github.io/">Yihuai Gao</a> 🐕
     </p>
   </div>
@@ -694,7 +694,7 @@
           <p>
             In this project, I use the <a href="https://developer.nvidia.com/isaac-gym">IsaacGym simulator</a> for
             physics, but like many of my prior works, I use <a href="https://www.blender.org/">Blender</a> for
-            rendering (e.g., <a href="https://www.cs.columbia.edu/~huy/scalingup/">Scaling Up</a>, <a
+            rendering (e.g., <a href="https://huy-ha.github.io/scalingup/">Scaling Up</a>, <a
               href="https://flingbot.cs.columbia.edu/">FlingBot</a>).
           </p>
           <br>
@@ -738,7 +738,7 @@
         <div class="content">
           <p>
             Website template modified from <a href="https://nerfies.github.io/">NeRFies</a> and <a
-              href="https://www.cs.columbia.edu/~huy/scalingup/">Scaling Up Distilling Down</a>.
+              href="https://huy-ha.github.io/scalingup/">Scaling Up Distilling Down</a>.
           </p>
           <p>
             This website is licensed under a <a rel="license"
